[package]
name = "cool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cool"
path = "src/main.rs"


[dependencies]
lexer = { path = "lexer" }
parser = { path = "parser" }
semantic = {path = "semantic"}


[profile.dev]
opt-level = 0
lto = "off"
panic = "unwind"
rpath = false
debug-assertions = true
overflow-checks = true